feat: Return error when status doesn't allow mnt-lower